--- a/src/index.css
+++ b/src/index.css
@@ -59,3 +59,9 @@ ul, ol {
   padding: 0;
   list-style: none;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
